crates/swc/tests/tsc-references/comparisonOperatorWithNumberOperand.2.minified.js
//// [comparisonOperatorWithNumberOperand.ts]
// repro #52036
t1; // error
